--- a/app/public/data/NASDAQ_FB/index.html
+++ b/app/public/data/NASDAQ_FB/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 <ul>
-<li><a href="line.html">line chart</a></li>
-<li><a href="multilines.html">multilines chart</a></li>
+<li><a href="line.html">Basic Chart</a></li>
+<li><a href="movingAverage.html">Moving Average Chart</a></li>
 </ul>
 </body>
 </html>
