complete the chartAgent.js

--- a/app/public/data/NASDAQ_FB/line.html
+++ b/app/public/data/NASDAQ_FB/line.html
@@ -89,3 +89,4 @@ d3.tsv("line.tsv", function(error, data) {
 });
 
 </script>
+<h1>NASDAQ_FB</h1><table><tr><td>Data Size</td><td>60</td></tr><tr><td>Current Price</td><td>82.44</td></tr><tr><td>Max Price</td><td>85.31</td></tr><tr><td>Min Price</td><td>74.05</td></tr></table><a href='./index.html'>back</a></body></html>
