--- a/app/public/data/index.html
+++ b/app/public/data/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<h1>Stock Dashboard</h1>
 <ul>
 <li><a href="NASDAQ_FB/index.html">NASDAQ_FB</a></li>
 <li><a href="NASDAQ_YHOO/index.html">NASDAQ_YHOO</a></li>
