--- a/app/public/data/NASDAQ_FB/exponentialMovingAverage.html
+++ b/app/public/data/NASDAQ_FB/exponentialMovingAverage.html
@@ -61,7 +61,7 @@ var svg = d3.select("body").append("svg")
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.tsv("movingAverage.tsv", function(error, data) {
+d3.tsv("exponentialMovingAverage.tsv", function(error, data) {
   color.domain(d3.keys(data[0]).filter(function(key) { return key !== "date"; }));
 
   data.forEach(function(d) {
