--- a/app/public/data/NASDAQ_YHOO/index.html
+++ b/app/public/data/NASDAQ_YHOO/index.html
@@ -1,8 +1,1 @@
-<html>
-<body>
-<ul>
-<li><a href="line.html">Basic Chart</a></li>
-<li><a href="movingAverage.html">Moving Average Chart</a></li>
-</ul>
-</body>
-</html>
+<html><body><h1>NASDAQ_YHOO</h1><ul><li><a href='line.html'>Basic Chart</a></li><li><a href='movingAverage.html'>Moving Average Chart</a></li><li><a href='exponentialMovingAverage.html'>Exponential Moving Average Chart</a></li><li><a href='bollingerBands.html'>Bollinger Bands Chart</a></li></ul><a href='../index.html'>back</a></body></html>
