--- a/app/public/data/NASDAQ_YHOO/line.html
+++ b/app/public/data/NASDAQ_YHOO/line.html
@@ -89,3 +89,4 @@ d3.tsv("line.tsv", function(error, data) {
 });
 
 </script>
+<h1>NASDAQ_YHOO</h1><table><tr><td>Data Size</td><td>60</td></tr><tr><td>Current Price</td><td>43.67</td></tr><tr><td>Max Price</td><td>50.23</td></tr><tr><td>Min Price</td><td>42.5</td></tr></table><a href='./index.html'>back</a></body></html>
