--- a/app/public/data/NASDAQ_YHOO/movingAverage.html
+++ b/app/public/data/NASDAQ_YHOO/movingAverage.html
@@ -118,3 +118,4 @@ d3.tsv("movingAverage.tsv", function(error, data) {
 });
 
 </script>
+<h1>NASDAQ_YHOO</h1><table></table><a href='./index.html'>back</a></body></html>
