fix the file issue

--- a/app/public/data/index.html
+++ b/app/public/data/index.html
@@ -2,7 +2,10 @@
 <body>
 <h1>Stock Dashboard</h1>
 <ul>
+<li><a href="NASDAQ_AAPL/index.html">NASDAQ_AAPL</a></li>
 <li><a href="NASDAQ_FB/index.html">NASDAQ_FB</a></li>
+<li><a href="NASDAQ_GOOG/index.html">NASDAQ_GOOG</a></li>
+<li><a href="NASDAQ_GOOGL/index.html">NASDAQ_GOOGL</a></li>
 <li><a href="NASDAQ_YHOO/index.html">NASDAQ_YHOO</a></li>
 </ul>
 </body>
